Terraform/TP09 (S3)/security_group.tf

resource "aws_security_group" "sg-renaud" {
  name = "renaud-sg-wordpress"

  ingress {
    description      = "Wordpress"
    from_port        = 8600
    to_port          = 8600
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "renaud-sg-wordpress"
  }
}
